Form working and correctly recording elements. firebase.auth().currentUser is currently reporting null

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,7 @@ html, body {
       border-radius: 3px;
       }
       input {
-      width: calc(40% - 10px);
+      /** width: calc(40% - 10px); **/
       padding: 5px;
       }
       select {
@@ -99,15 +99,18 @@ html, body {
       opacity: 0;
       cursor: pointer;
       }
+      /** Uncomment these sections when moving back to stylized checkboxes
       input[type=radio], input[type=checkbox]  {
       display: none;
       }
+      
       label.radio, label.check {
       position: relative;
       display: inline-block;
       margin: 13px;
       cursor: pointer;
       }
+      **/
       .question span {
       margin-left: 30px;
       }
@@ -115,9 +118,11 @@ html, body {
       margin-left: 0;
       color: red;
       }
+      /** Uncomment these sections when moving back to stylized checkboxes
       .checkbox-item label {
       margin: 5px 20px 10px 0;
       }
+      
       label.radio:before, label.check:before {
       content: "";
       position: absolute;
@@ -136,6 +141,7 @@ html, body {
       border-radius: 2px;
       border: 1px solid #095484;
       }
+      **/
       table.ratings{
                   table-layout: fixed;
                   width: 100%;
@@ -149,6 +155,7 @@ html, body {
                   padding: 0px;
             }
       }
+      /** Uncomment these sections when moving back to stylized checkboxes
       input[type=checkbox]:checked + .check:before {
       background: #095484;
       }
@@ -175,6 +182,7 @@ html, body {
       input[type=radio]:checked + label:after, input[type=checkbox]:checked + label:after {
       opacity: 1;
       }
+      **/
       .btn-block {
       margin-top: 10px;
       text-align: center;
