--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,7 +25,7 @@ html, body {
       margin: auto;
       padding: 20px;
       min-width: auto;
-      max-width: 750px;
+      max-width: 850px;
       }
       form {
       width: 100%;
@@ -207,21 +207,26 @@ html, body {
       #sign-in {
             margin: 20px;
       }
+      .sign-in-header{
+        padding-top: 50px;
+      }
+      /**
       @media (min-width: 568px) {
-      .city-item {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
+        .city-item {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        }
+        .city-item input {
+        width: calc(50% - 20px);
+        }
+        .city-item select {
+        width: calc(50% - 8px);
+        }
+        .sign-in-header {
+              align-content: center;
       }
-      .city-item input {
-      width: calc(50% - 20px);
-      }
-      .city-item select {
-      width: calc(50% - 8px);
-      }
-      .sign-in-header {
-            align-content: center;
-      }
+      **/
       /* The Modal (background) */
       .modal {
         display: none; /* Hidden by default */
@@ -266,6 +271,9 @@ html, body {
         overflow: hidden;
         background-color: #095484;
         position: relative;
+        width: 100%;
+        min-height: 50px;
+        position: fixed;
       }
 
       /* Hide the links inside the navigation menu (except for logo/home) */
